Project slider moement bug fixed. Still not found a fix for the overflow of process pragraphs in mobile devices.

--- a/style.css
+++ b/style.css
@@ -1634,7 +1634,6 @@ button{
 
     .project-content{
         font-size: 0.8rem;
-        overflow-y: scroll; ---->left here added overflow scroll to see the text content
     }
     
     .project-process-text{
